# Qt

./: .gitignore  CLAUDE.md  README.md
client/: chat.cpp  chat.h  chat.ui  widget.cpp  widget.h  widget.ui
install/: local_setup.sh  setup.sh  spawn_shell.bash
install/qt_image_text_transfer/share/ament_index/resource_index/parent_prefix_path/: qt_image_text_transfer
install/qt_image_text_transfer/share/qt_image_text_transfer/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/qt_image_text_transfer/share/qt_image_text_transfer/cmake/: qt_image_text_transferConfig.cmake
picture_client/: mainwindow.cpp  mainwindow.h  mainwindow.ui  picture_client.pro
picture_server/: mainwindow.cpp  mainwindow.h  mainwindow.ui  mythread.cpp  mythread.h  picture_server.pro
qt_image_text_transfer/: CMakeLists.txt
qt_image_text_transfer/include/qt_image_text_transfer/: client_node.h  client_window.h  server_node.h  server_window.h
qt_image_text_transfer/launch/: image_text_transfer.launch.py
qt_image_text_transfer/src/: client_node.cpp  client_window.cpp  main.cpp  server_node.cpp  server_window.cpp
server/: mythread.cpp  mythread.h  widget.cpp  widget.h  widget.ui
