<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_image_text_transfer</name>
  <version>1.0.0</version>
  <description>基于Qt5的服务端与客户端图文传输系统</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <build_depend>Qt5Widgets</build_depend>
  <build_depend>Qt5Core</build_depend>
  <build_depend>Qt5Gui</build_depend>

  <exec_depend>Qt5Widgets</exec_depend>
  <exec_depend>Qt5Core</exec_depend>
  <exec_depend>Qt5Gui</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
